--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,10 @@
 .App {
   text-align: center;
+  overflow: hidden;
+}
+
+.App::-webkit-scrollbar {
+  display: none; /* for Chrome, Safari, and Opera */
 }
 
 .App-logo {
